--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "axios": "^0.27.2",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-number-format": "^4.9.3",
+    "react-phone-input-2": "^2.15.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.4.0",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
