--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "tailwindcss": "2.0.4"
   },
   "scripts": {
-    "start": "next start",
+    "dev": "node server.js",
     "build": "next build",
-    "dev": "next dev",
+    "start": "NODE_ENV=production node server.js",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
     "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
   },
